# vins-fusion-and-path-planning

./: README.md
VINS-Fusion/camera_models/: CMakeLists.txt
VINS-Fusion/camera_models/src/chessboard/: Chessboard.cc
VINS-Fusion/config/: vins_rviz_config.rviz
VINS-Fusion/config/euroc/: cam0_mei.yaml  cam0_realsense.yaml  cam1_mei.yaml  cam1_realsense.yaml  d435_imu.yaml  euroc_mono_imu_config.yaml  euroc_stereo_imu_config.yaml
VINS-Fusion/loop_fusion/: CMakeLists.txt
VINS-Fusion/loop_fusion/src/: keyframe.cpp
VINS-Fusion/surfel_fusion/: CMakeLists.txt
VINS-Fusion/surfel_fusion/launch/: surfel.rviz  surfel_fusion.launch
VINS-Fusion/surfel_fusion/src/: fusion_functions.cpp  ros_node.cpp  surfel_map.cpp
VINS-Fusion/vins_estimator/: CMakeLists.txt
VINS-Fusion/vins_estimator/launch/: loop.launch  realsense_imu.launch  visual_slam.launch
VINS-Fusion/vins_estimator/src/: rosNodeTest.cpp
handsfree_ros_imu/launch/: handsfree_imu.launch
handsfree_ros_imu/scripts/: hfi_a9_ros.py  hfi_b6_ros.py  hfi_b9_ros.py
motion-planning/src/jps_simulation/: CMakeLists.txt  package.xml
motion-planning/src/jps_simulation/include/Jps_class/: Jps.h
motion-planning/src/jps_simulation/include/Node_class/: Node.h
motion-planning/src/jps_simulation/include/pcl2grid_class/: pcl2grid.h
motion-planning/src/jps_simulation/include/publisher/: publisher.h
motion-planning/src/jps_simulation/launch/: get_laser_map.launch  jps_simulation.launch  realsense_jps.launch
motion-planning/src/jps_simulation/rviz_config/: jps_rviz.rviz  my_rviz.rviz  my_simulation.rviz
motion-planning/src/jps_simulation/src/: get_laser_map.cpp  turtle_robot.cpp
motion-planning/src/jps_simulation/src/Jps_class/: Jps.cpp  Jps_node.cpp
motion-planning/src/jps_simulation/src/Node_class/: Node.cpp
motion-planning/src/jps_simulation/src/pcl2grid_class/: pcl2grid.cpp
motion-planning/src/jps_simulation/src/publisher/: publisher.cpp
motion-planning/src/putn/putn_launch/: CMakeLists.txt  package.xml
motion-planning/src/putn/putn_launch/launch/: simulation.launch
motion-planning/src/putn/putn_launch/rviz_config/: my_simulation.rviz
motion-planning/src/putn/putn_planning/: CMakeLists.txt
motion-planning/src/putn/putn_waypoint_generator/src/: waypoint_generator.cpp
motion-planning/src/scout_simulator/scout_description/urdf/: scout_v2.xacro
motion-planning/src/scout_simulator/scout_gazebo_sim/: CMakeLists.txt
motion-planning/src/scout_simulator/scout_gazebo_sim/launch/: spawn_scout_v2.launch
realsense-ros/realsense2_camera/: CMakeLists.txt
realsense-ros/realsense2_camera/launch/: demo_pointcloud.launch
